--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ng-icons/core": "^26.3.0",
     "@ng-icons/heroicons": "^26.3.0",
     "rxjs": "~7.5.0",
+    "tailwindcss-textshadow": "^2.1.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
